ref: avoid some jumping by hiding non-js versions on a js capable browser

--- a/assets/css/dropdown.scss
+++ b/assets/css/dropdown.scss
@@ -28,6 +28,7 @@
       font-size: 1em;
     }
 
+    body.js &,
     &.js {
       .menu {
         padding: 0 0 0.5em;
